--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "start-react": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -52,8 +51,5 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18"
-  },
-  "engines": {
-    "node": "12.16.1"
   }
 }
